--- a/0801-positioning/class03-three-box.html
+++ b/0801-positioning/class03-three-box.html
@@ -2,10 +2,39 @@
 <html>
 	<head>
 		<title>Brooklyn Bridge</title>
+		<style>
+			#wrapper{
+				display:inline-block;
+			}
+
+			#box1{
+				width:340px; 
+				height:340px; 
+				background:pink;
+			}
+
+			#box2{
+				width:340px; 
+				height:340px; 
+				background: red; 
+				display: block;
+			}
+
+			#box3{
+				width:340px; 
+				height:680px; 
+				background: yellow; 
+				display:inline-block;
+			}
+
+		</style>
 	</head>
 	<body>
-		<div style="display:inline-block"><div style="width:340px; height:340px; background:pink"></div><div style="width:340px; height:340px; background:red; display:block"></div></div>
-		<div style="width:340px; height:680px; background: yellow; display:inline-block"></div>
+		<div id="wrapper">
+			<div id="box1"></div>
+			<div id="box2"></div>
+		</div>
+		<div id="box3"></div>
 	</body>
 
 </html>
